<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ArduinoCar</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="connected">Connected</string>
    <string name="connecting">Connecting</string>
    <string name="connect">Connect</string>
    <string name="disconnected">Disconnected</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="speed">Speed</string>
    <string name="forward">Forward</string>
    <string name="backward">Backward</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="scan">Scan</string>
    <string name="add">Add</string>
    <string name="controller_name">Controller Name</string>
    <string name="auto_connect">Auto Connect</string>
    <string name="auto_disconnect">Auto Disconnect</string>
    <string name="rows">Rows</string>
    <string name="columns">Columns</string>

    <!-- Top & Bottom Menu Buttons -->
    <string name="connection_info">Connection Info</string>
    <string name="settings">Settings</string>
    <string name="controllers">Controllers</string>
    <string name="controller_settings">Controller Settings</string>
    <string name="add_button">Add Button</string>
    <string name="edit_button">Edit Button</string>
    <string name="close">Close</string>

    <!-- TAGS -->
    <string name="tag_animation_assigned">TAG_ANIMATION_ASSIGNED</string>
    <string name="tag_no_animation_assigned">TAG_NO_ANIMATION_ASSIGNED</string>
    <string name="tag_engine_direction_forwards">1</string>
    <string name="tag_engine_direction_backwards">0</string>

    <!-- Channels -->
    <string name="channel_a">A</string>
    <string name="channel_b">B</string>
    <string name="channel_c">C</string>
    <string name="channel_d">D</string>

    <!-- Controllers Types-->
    <string name="servo">Servo</string>
    <string name="motor">Motor</string>
    <string name="multiple">Multiple</string>
    <string name="stick_car">Stick Car</string>
    <string name="custom_controller">Custom Controller</string>
    <string name="accelerometer">Accelerometer</string>

    <!-- Button Types -->
    <string name="on_off">On/Off</string>
    <string name="go_right">Go Right</string>
    <string name="go_left">Go Left</string>
    <string name="toggle_direction">Toggle Direction</string>
    <string name="speed_up">speed Up</string>
    <string name="speed_down">speed Down</string>
    <string name="speed_control">speed Control</string>
    <string name="acc_control">Acc Control</string>

</resources>
