<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"></FrameLayout>-->

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager_menu"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="top"></android.support.v4.view.ViewPager>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/linear_menu_buttons"
        android:layout_gravity="bottom">

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/connection_info"
            android:id="@+id/btn_connection_info"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/controllers"
            android:id="@+id/btn_select_controller"
            android:layout_weight="1" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/add_button"
            android:id="@+id/btn_add_button"
            android:layout_weight="1"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/edit_button"
            android:id="@+id/btn_edit"
            android:layout_weight="1"/>

        <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:id="@+id/btn_full_screen"
            android:layout_gravity="right"
            android:layout_weight="1"
            android:text="Full"/>

       <Button
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/close"
            android:id="@+id/btn_close"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>