<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/off"
            android:id="@+id/btn_on_off"
            android:layout_weight="1"
            android:tag="@string/off"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:id="@+id/btn_forw_bacw"
            android:layout_weight="1"
            android:tag="@string/tag_engine_direction_forwards"/>
    </LinearLayout>

    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/speed_picker"
        android:layout_below="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/linear_channels"
        android:layout_above="@+id/linearLayout">

        </LinearLayout>


</RelativeLayout>