<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="9">


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_weight="9"
        android:weightSum="9">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:gravity="center"
            android:background="@android:color/transparent">

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/add_button"
                android:id="@+id/btn_add_button"
                android:layout_weight="1" />

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/edit_button"
                android:id="@+id/btn_edit_button"
                android:layout_weight="1"/>

            <Button
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:text="@string/close"
                android:id="@+id/btn_close"
                android:layout_weight="1" />

        </LinearLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/view_pager_menu"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@android:color/black"></android.support.v4.view.ViewPager>

        </LinearLayout>


</LinearLayout>